# video-silence-cutter

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
rust-version/: Cargo.toml
rust-version/src/: main.rs
src/: index.ts  main.rs  silenceMachine.ts
