[package]
name = "video-silence-trimmer"
version = "0.1.0"
authors = ["Gabriel Restori Soares <soares-21@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
hound = "3.0.0"
indicatif = "0.15.0"